[gd_scene load_steps=10 format=3 uid="uid://djvbfn4660vsy"]

[ext_resource type="Texture2D" uid="uid://dnm6ea8vsnhrl" path="res://levels/house/game2a/assets/game2a.png" id="1_hn3xx"]
[ext_resource type="Script" uid="uid://ca1pdkkva1mas" path="res://levels/house/game2a/game_2_a.gd" id="1_u0rq2"]
[ext_resource type="PackedScene" uid="uid://w0qpaga3tw4k" path="res://utilities/scenes/back_arrow/BackArrow.tscn" id="2_u0rq2"]
[ext_resource type="Script" uid="uid://c3px6kwa161o3" path="res://levels/house/game2a/thought_bubbles.gd" id="4_5dcq2"]
[ext_resource type="Texture2D" uid="uid://bviols4volsgn" path="res://levels/house/game2a/assets/thought.png" id="4_c1q33"]
[ext_resource type="Texture2D" uid="uid://cb56yor7qsl1x" path="res://levels/house/game2a/assets/red circle.png" id="6_tpf86"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5dcq2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tpf86"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jlp3p"]

[node name="Game2A" type="Node2D"]
script = ExtResource("1_u0rq2")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.755463, 0.755463)
texture = ExtResource("1_hn3xx")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="BackArrow" parent="." instance=ExtResource("2_u0rq2")]
position = Vector2(-506, 253)
scale = Vector2(0.327595, 0.327595)
scenePath = "res://levels/house/house.tscn"

[node name="AppleSpawnPoints" type="Node" parent="."]

[node name="Marker2D" type="Marker2D" parent="AppleSpawnPoints"]
position = Vector2(-146, -242)

[node name="Marker2D2" type="Marker2D" parent="AppleSpawnPoints"]
position = Vector2(-41, -209)

[node name="Marker2D3" type="Marker2D" parent="AppleSpawnPoints"]
position = Vector2(-217, -162)

[node name="Marker2D4" type="Marker2D" parent="AppleSpawnPoints"]
position = Vector2(-103, -139)

[node name="Marker2D5" type="Marker2D" parent="AppleSpawnPoints"]
position = Vector2(38, -235)

[node name="Marker2D6" type="Marker2D" parent="AppleSpawnPoints"]
position = Vector2(117, -165)

[node name="Marker2D7" type="Marker2D" parent="AppleSpawnPoints"]
position = Vector2(0, -98)

[node name="Marker2D8" type="Marker2D" parent="AppleSpawnPoints"]
position = Vector2(-228, -51)

[node name="Marker2D9" type="Marker2D" parent="AppleSpawnPoints"]
position = Vector2(-83, -40)

[node name="Marker2D10" type="Marker2D" parent="AppleSpawnPoints"]
position = Vector2(70, -43)

[node name="thought_1" type="Area2D" parent="."]
position = Vector2(417, 174)
scale = Vector2(6.89992, 6.89992)
script = ExtResource("4_5dcq2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="thought_1"]
shape = SubResource("CircleShape2D_5dcq2")

[node name="Sprite2D" type="Sprite2D" parent="thought_1"]
position = Vector2(0.724646, 2.17394)
scale = Vector2(0.0269203, 0.0269203)
texture = ExtResource("4_c1q33")

[node name="Red Circle" type="Sprite2D" parent="thought_1"]
visible = false
position = Vector2(0.144931, 7.15256e-07)
scale = Vector2(0.0699489, 0.0699489)
texture = ExtResource("6_tpf86")

[node name="Label" type="Label" parent="thought_1"]
offset_left = -2.89859
offset_top = -7.24646
offset_right = 43.1014
offset_bottom = 102.754
scale = Vector2(0.133461, 0.133461)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "0"

[node name="thought_2" type="Area2D" parent="."]
position = Vector2(407, -205)
scale = Vector2(6.72372, 6.72372)
script = ExtResource("4_5dcq2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="thought_2"]
shape = SubResource("CircleShape2D_tpf86")

[node name="Sprite2D" type="Sprite2D" parent="thought_2"]
position = Vector2(0.594913, 2.23091)
scale = Vector2(0.0266346, 0.0266346)
texture = ExtResource("4_c1q33")

[node name="Red Circle" type="Sprite2D" parent="thought_2"]
visible = false
scale = Vector2(0.0706587, 0.0706587)
texture = ExtResource("6_tpf86")

[node name="Label" type="Label" parent="thought_2"]
offset_left = -2.82581
offset_top = -6.69272
offset_right = 43.1742
offset_bottom = 103.307
scale = Vector2(0.128957, 0.128957)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "0"

[node name="thought_3" type="Area2D" parent="."]
position = Vector2(412, -15)
scale = Vector2(7.08583, 7.08583)
script = ExtResource("4_5dcq2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="thought_3"]
shape = SubResource("CircleShape2D_jlp3p")

[node name="Sprite2D" type="Sprite2D" parent="thought_3"]
position = Vector2(0.564507, 2.1169)
scale = Vector2(0.0269012, 0.0269012)
texture = ExtResource("4_c1q33")

[node name="Red Circle" type="Sprite2D" parent="thought_3"]
visible = false
scale = Vector2(0.0717002, 0.0717002)
texture = ExtResource("6_tpf86")

[node name="Label" type="Label" parent="thought_3"]
offset_left = -2.96366
offset_top = -7.33859
offset_right = 43.0363
offset_bottom = 102.661
scale = Vector2(0.121289, 0.121289)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "0"

[connection signal="game_end" from="." to="thought_1" method="_on_game_game_end"]
[connection signal="game_end" from="." to="thought_2" method="_on_game_game_end"]
[connection signal="game_end" from="." to="thought_3" method="_on_game_game_end"]
[connection signal="input_event" from="thought_1" to="thought_1" method="_on_thought_input_event"]
[connection signal="node_clicked" from="thought_1" to="." method="_on_thought_node_clicked"]
[connection signal="input_event" from="thought_2" to="thought_2" method="_on_thought_input_event"]
[connection signal="node_clicked" from="thought_2" to="." method="_on_thought_node_clicked"]
[connection signal="input_event" from="thought_3" to="thought_3" method="_on_thought_input_event"]
[connection signal="node_clicked" from="thought_3" to="." method="_on_thought_node_clicked"]
